--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -2,86 +2,112 @@
 @import "theme";
 
 html {
-    box-sizing: border-box; //if box width is 300px and you add 20px of padding, the size of the box stay 300px instead 340px
-    font-size: 100%;
-    // -webkit-user-select: none;
-    // user-select: none;
+  box-sizing: border-box; //if box width is 300px and you add 20px of padding, the size of the box stay 300px instead 340px
+  font-size: 100%;
+  // -webkit-user-select: none;
+  // user-select: none;
 }
 
 ::-moz-selection {
-    /* Code for Firefox */
-    color: rgb(181, 234, 255);
-    background: rgb(245, 245, 245);
+  /* Code for Firefox */
+  color: rgb(181, 234, 255);
+  background: rgb(245, 245, 245);
 }
 
 ::selection {
-    // color: white;
-    // background: rgb(158, 158, 158);
-    color: rgb(181, 234, 255);
-    background: rgb(245, 245, 245);
+  // color: white;
+  // background: rgb(158, 158, 158);
+  color: rgb(181, 234, 255);
+  background: rgb(245, 245, 245);
 }
 
 body {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+@media (min-width: 900px) {
+  body {
     overflow-y: hidden;
     overflow-x: hidden;
+  }
+}
+
+@media (max-width: 900px) {
+  body {
+    overflow-y: visible;
+  }
 }
 
 .test {
-    position: fixed;
-    mix-blend-mode: difference;
-    opacity: 0;
-    width: 100dvw;
-    height: 100dvh;
+  position: fixed;
+  mix-blend-mode: difference;
+  opacity: 0;
+  width: 100dvw;
+  height: 100dvh;
 }
 
 .title {
-    // border: 2px solid red;
-    height: 100vh;
-    position: relative;
+  // border: 2px solid red;
+  height: 100vh;
+  position: relative;
 }
 
-
-
 .canvas {
-    position: fixed;
-    top: 0;
-    left: 0;
-    background-color: #c3e6f4;
-    z-index: -2;
+  position: fixed;
+  top: 0;
+  left: 0;
+  background-color: #c3e6f4;
+  z-index: -2;
 }
 
 .wind__canvas {
-    z-index: -1;
-    position: absolute;
-    top: 0;
-    left: 0;
+  z-index: -1;
+  position: absolute;
+  top: 0;
+  left: 0;
 }
 .main__section {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    height: 100%;
-    z-index: 3000;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+  z-index: 3000;
 }
 
 .content {
-    height: 100dvh;
+  height: 100dvh;
 }
 
 .overlay {
-    position: fixed;
-    top: 0;
-    left: -100%;
-    z-index: 1;
-    width: 100%;
-    height: 100vh;
+  position: fixed;
+  top: 0;
+  left: -100%;
+  z-index: 1;
+  width: 100%;
+  height: 100vh;
 }
 
 .overlay-div {
-    height: 25%;
-    width: 100%;
-    background-color: $primary-color-darkblue;
+  height: 25%;
+  width: 100%;
+  background-color: $primary-color-darkblue;
+}
+
+.mobile {
+  overflow-y: visible;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 200dvh;
+  width: 100%;
+  //   border: 2px solid red;
+}
+.mobile__section__first,
+.mobile__section__second {
+  overflow-y: auto;
+  height: 100dvh;
+  width: 100%;
+  //   border: 2px solid blue;
 }
