--- a/frontend/src/components/ScrollDiscover/ScrollDiscover.module.scss
+++ b/frontend/src/components/ScrollDiscover/ScrollDiscover.module.scss
@@ -2,49 +2,91 @@
 @import "../../styles/font";
 
 .scroll {
-    width: 400px;
-    height: 10%;
-    // border: 2px solid red;
+  width: 400px;
+  height: 10%;
+  // border: 2px solid red;
+  display: flex;
+  position: absolute;
+  justify-content: end;
+  align-items: center;
+  bottom: 0vh;
+  right: 2vw;
+
+  &__text {
+    font-family: "OktaNeue-Bold";
+    font-size: 1.3vw;
+    color: $primary-color-darkblue;
+  }
+
+  &__circle {
+    width: 1vw;
+    height: 1vw;
+    border-radius: 50%;
+    background-color: $primary-color-darkblue;
     display: flex;
-    position: absolute;
-    justify-content: end;
+    justify-content: center;
     align-items: center;
-    bottom: 0vh;
-    right: 2vw;
+    cursor: pointer;
+    margin-left: 1vw;
+    margin-top: 0.3vw;
 
-    &__text {
-        font-family: "OktaNeue-Bold";
-        font-size: 1.3vw;
-        color: $primary-color-darkblue;
-    }
+    animation: circleUpAndDown 2s infinite;
+  }
+}
 
-    &__circle {
-        width: 1vw;
-        height: 1vw;
-        border-radius: 50%;
-        background-color: $primary-color-darkblue;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        cursor: pointer;
-        margin-left: 1vw;
-        margin-top: 0.3vw;
+// MOBILE ////////////////////////////////////////////////////////////////
 
-        animation: circleUpAndDown 2s infinite;
+.scroll__mobile {
+  width: 400px;
+  // border: 2px solid red;
+  display: flex;
+  position: absolute;
+  justify-content: end;
+  align-items: center;
+  bottom: 2vh;
+  right: 2vw;
 
+  &__text {
+    font-family: "OktaNeue-Bold";
+    font-size: 3vw;
+    color: $primary-color-darkblue;
+  }
+  &__circle {
+    width: 2vw;
+    height: 2vw;
+    border-radius: 50%;
+    background-color: $primary-color-darkblue;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    margin-left: 1vw;
+    margin-top: 0.3vw;
 
-    }
+    animation: circleUpAndDownMobile 2s infinite;
+  }
 }
 
 @keyframes circleUpAndDown {
-    0% {
-        transform: translateY(0.5vw);
-    }
-    50% {
-        transform: translateY(-0.5vw);
-    }
-    100% {
-        transform: translateY(0.5vw);
-    }
-    
+  0% {
+    transform: translateY(0.5vw);
+  }
+  50% {
+    transform: translateY(-0.5vw);
+  }
+  100% {
+    transform: translateY(0.5vw);
+  }
+}
+
+@keyframes circleUpAndDownMobile {
+  0% {
+    transform: translateY(1vw);
+  }
+  50% {
+    transform: translateY(-1vw);
+  }
+  100% {
+    transform: translateY(1vw);
+  }
 }
