--- a/frontend/src/components/Mobile/MobileVideo/MobileVideo.module.scss
+++ b/frontend/src/components/Mobile/MobileVideo/MobileVideo.module.scss
@@ -6,9 +6,12 @@
   z-index: -1;
 
   video {
-    margin-left: -100%;
+    margin-left: -120%;
+    margin-top: 20%;
     width: 350%;
-    object-fit: cover; /* Let the width adjust automatically */
+    transform: scale(1.2);
+    object-fit: cover;
+    /* Let the width adjust automatically */
     /* Set the height to be 100% of the container */
   }
 }
