--- a/frontend/src/components/Mobile/MobileTitle/MobileTitle.module.scss
+++ b/frontend/src/components/Mobile/MobileTitle/MobileTitle.module.scss
@@ -4,7 +4,7 @@
 .title {
   display: flex;
   flex-direction: column;
-  margin-top: 12vw;
+  margin-top: 6dvh;
   &__one,
   &__two {
     margin: 0;
