Done : Mobile Adjust Test 2

--- a/frontend/src/components/Mobile/MobileNavbar/MobileNavbar.module.scss
+++ b/frontend/src/components/Mobile/MobileNavbar/MobileNavbar.module.scss
@@ -35,11 +35,12 @@
 
 .menu,
 .contact {
-  //   border: 2px solid blue;
-  font-size: 3.5vw;
+  // border: 2px solid blue;
+  font-size: 4vw;
   display: flex;
   align-items: center;
   height: 100%;
+  line-height: 140%;
   span {
     margin: 0;
     padding: 0;
