--- a/frontend/src/components/Mobile/MobileNavbar/MobileNavbar.module.scss
+++ b/frontend/src/components/Mobile/MobileNavbar/MobileNavbar.module.scss
@@ -3,18 +3,17 @@
 
 .navbar {
   width: 100dvw;
-  // border: 2px solid red;
   // top: 2dvw;
   // left: 10%;
   box-sizing: border-box;
   position: fixed;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   font-family: "OktaNeue-Bold";
   text-transform: uppercase;
   padding: 2vw 2vw;
   padding-top: 2dvh;
-  font-size: 3.5vw;
   -webkit-backdrop-filter: blur(10px);
   backdrop-filter: blur(10px);
   //rgb(230, 228, 228, 0.835); // rgb(230, 228, 228, 0.835)
@@ -35,12 +34,12 @@
 
 .menu,
 .contact {
-  // border: 2px solid blue;
   font-size: 4vw;
+  margin-top: -1vw;
   display: flex;
   align-items: center;
-  height: 100%;
-  line-height: 140%;
+  height: 5vw;
+
   span {
     margin: 0;
     padding: 0;
