--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -28,14 +28,14 @@ body {
 }
 
 @media (min-width: 900px) {
-  body {
+  html {
     overflow-y: hidden;
     overflow-x: hidden;
   }
 }
 
 @media (max-width: 900px) {
-  body {
+  html {
     overflow-y: visible;
   }
 }
