--- a/frontend/src/components/Controls/Controls.module.scss
+++ b/frontend/src/components/Controls/Controls.module.scss
@@ -2,261 +2,279 @@
 @import "../../styles/theme";
 
 .controls__blur {
-    position: fixed;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: 20000;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 20000;
 
-    -webkit-backdrop-filter: blur(7px);
-    backdrop-filter: blur(7px);
-    background-color: #f1efef03;
+  -webkit-backdrop-filter: blur(7px);
+  backdrop-filter: blur(7px);
+  background-color: #f1efef03;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .controls__wrapper {
-    width: 70vw;
-    height: 100vh;
-    margin-top: -2%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: $white-board-opac;
-    border-radius: 5px;
-    color: $primary-color-darkblue;
+  margin-top: -2vw;
+  width: 65vw;
+  height: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: $white-board-opac;
+  color: $primary-color-darkblue;
+  border-radius: 13px;
 }
 
 .controls {
-    opacity: 0;
+  opacity: 0;
 
-    position: relative;
-    font-family: "NeueMontreal-Regular";
+  position: relative;
+  font-family: "NeueMontreal-Regular";
+  display: flex;
+  // flex-direction: column;
+  justify-content: center;
+  gap: 5vw;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  color: $primary-color-darkblue;
+  //   border: 2px solid blue;
+  margin: 2vw;
+  &__title {
     display: flex;
-    // flex-direction: column;
-    justify-content: space-around;
-    padding: 60px 20px;
-    align-items: center;
+    flex-direction: column;
+    // border: 2px solid blue;
+    h2 {
+      font-family: "OktaNeue-Medium";
+      font-weight: 900;
+      margin: 0;
+      font-size: 3vw;
+    }
+    p {
+      margin-top: 0;
+      margin-bottom: 2vw;
+    }
+  }
+  &__left {
+    display: flex;
+    flex-direction: column;
     height: 100%;
-    width: 100%;
+    // border: 2px solid blue;
+  }
+
+  &__keyboard {
+    font-family: "NeueMontreal-Medium";
+    font-size: $fontsize-m;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 20%;
+    min-width: 270px;
     color: $primary-color-darkblue;
-    border: 2px solid blue;
 
-    &__key {
-        position: relative;
-        width: 50px;
-        height: 50px;
-     
-        &__front {
-            position: absolute;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            border: 1px solid rgb(125, 125, 125);
-            background-color: #f1efef;
-            border-radius: 3px;
-            z-index: 3;
-            display: flex;
-            justify-content: center;
-            font-weight: 700;
-            font-size: 20px;
-            color: #3e3a3a;
-            &__arrow {
-                width: 19px;
-                height: 22px;
-                margin-top: 6px;
-                transform: translate(-50%, -50%);
+    &__ctn {
+      font-family: "NeueMontreal-Medium";
+      width: 60%;
+      display: flex;
+      justify-content: space-between;
+    }
+    &__input {
+      width: 50%;
+      display: flex;
+      justify-content: space-between;
+      // border: 2px solid blue;
+      input {
+        display: none;
+      }
 
-                &__right {
-                    transform: rotate(90deg);
-                }
-                &__left {
-                    transform: rotate(-90deg);
-                }
-            }
-        }
+      label {
+        cursor: pointer;
+        color: #8e8c8c;
+        transition: 0.3s ease-in-out;
+      }
+      input:checked ~ label {
+        color: rgb(24, 23, 23);
+      }
+    }
+  }
 
-        &__back {
-            position: absolute;
-            top: 7px;
-            width: 100%;
-            height: 100%;
-            background-color: rgb(148, 148, 148);
-            border: 1px solid rgb(125, 125, 125);
-            border-radius: 3px;
-            z-index: 1;
+  &__key {
+    position: relative;
+    width: 50px;
+    height: 50px;
+    // border: 2px solid green;
+
+    &__front {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      border: 1px solid rgb(125, 125, 125);
+      background-color: #f1efef;
+      border-radius: 3px;
+      z-index: 3;
+      display: flex;
+      justify-content: center;
+      font-weight: 700;
+      font-size: 20px;
+      color: #3e3a3a;
+      &__arrow {
+        width: 19px;
+        height: 22px;
+        margin-top: 6px;
+        transform: translate(-50%, -50%);
+
+        &__right {
+          transform: rotate(90deg);
         }
-        span {
-            font-size: 27px;
-            text-align: center;
-            width: 100%;
-            display: flex;
-            justify-content: center;
-            color: #3e3a3a;
+        &__left {
+          transform: rotate(-90deg);
         }
+      }
     }
 
-    &__space {
-        position: relative;
-        width: 140px;
-        height: 50px;
-        font-size: 22px;
+    &__back {
+      position: absolute;
+      top: 7px;
+      width: 100%;
+      height: 100%;
+      background-color: rgb(148, 148, 148);
+      border: 1px solid rgb(125, 125, 125);
+      border-radius: 3px;
+      z-index: 1;
+    }
+    span {
+      font-size: 27px;
+      text-align: center;
+      width: 100%;
+      display: flex;
+      justify-content: center;
+      color: #3e3a3a;
+    }
+  }
 
-        &__front {
-            display: flex;
-            justify-content: center;
-            position: absolute;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            border: 1px solid rgb(125, 125, 125);
-            background-color: #f1efef;
-            border-radius: 3px;
-            z-index: 3;
-            font-weight: 700;
-            color: #3e3a3a;
+  &__space {
+    position: relative;
+    width: 140px;
+    height: 50px;
+    font-size: 22px;
 
-            span {
-                margin-top: 4px;
-            }
+    &__front {
+      display: flex;
+      justify-content: center;
+      position: absolute;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      border: 1px solid rgb(125, 125, 125);
+      background-color: #f1efef;
+      border-radius: 3px;
+      z-index: 3;
+      font-weight: 700;
+      color: #3e3a3a;
+
+      span {
+        margin-top: 4px;
+      }
+    }
+    &__back {
+      position: absolute;
+      top: 7px;
+      width: 100%;
+      height: 100%;
+      background-color: rgb(148, 148, 148);
+      border: 1px solid rgb(125, 125, 125);
+      border-radius: 3px;
+      z-index: 1;
+    }
+  }
+
+  &__instructions {
+    display: flex;
+
+    &__item {
+      // width: 100px solid red;
+      // height: 20px;
+
+      display: flex;
+      justify-content: left;
+    }
+    &__keys {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 10px;
+      margin-top: 20px;
+      font-size: $fontsize-m;
+      font-family: "NeueMontreal-Medium";
+      color: $primary-color-darkblue;
+
+      &__arrow {
+        width: 19px;
+        height: 22px;
+        margin-top: 6px;
+        // border: 2px solid red;
+        width: 40%;
+
+        &__right {
+          transform: rotate(90deg);
         }
-        &__back {
-            position: absolute;
-            top: 7px;
-            width: 100%;
-            height: 100%;
-            background-color: rgb(148, 148, 148);
-            border: 1px solid rgb(125, 125, 125);
-            border-radius: 3px;
-            z-index: 1;
+        &__left {
+          transform: rotate(-90deg);
         }
+      }
+    }
+  }
+
+  &__video {
+    margin-top: 0;
+    display: flex;
+    height: 60%;
+    width: 45%;
+    // border: 2px solid red;
+    &__ctn {
+      width: 100%;
+    }
+  }
+  &__gotoplay {
+    position: absolute;
+    bottom: 0;
+    height: 13%;
+
+    align-items: center;
+    // border: 2px solid rgb(0, 0, 255);
+    button {
+      cursor: pointer;
+      border: none;
+      background: none;
+      font-size: 2.3vw;
+      margin-top: 10px;
+      font-family: "OktaNeue-Medium";
+      display: flex;
+      flex-direction: column;
+      height: 2.3vw;
+      overflow: hidden;
+      // border: 2px solid red;
+
+      span {
+        margin: 0;
+        padding: 0;
+        line-height: 1;
+        height: 2.3vw;
+        transform: translateY(-100%);
+        transition: 0.3s ease-in-out;
+      }
     }
 
-    &__instructions {
-        display: flex;
-        
-
-        &__item {
-            // width: 100px solid red;
-            // height: 20px;
-            // border: 2px solid green;
-            display: flex;
-            justify-content: left;
-        }
-        &__keys {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            gap: 10px;
-            margin-top: 20px;
-            font-size: $fontsize-m;
-            font-family: "NeueMontreal-Medium";
-            color: $primary-color-darkblue;
-
-            &__arrow {
-                width: 19px;
-                height: 22px;
-                margin-top: 6px;
-                // border: 2px solid red;
-                width: 40%;
-
-                &__right {
-                    transform: rotate(90deg);
-                }
-                &__left {
-                    transform: rotate(-90deg);
-                }
-
-               
-            }
-        }
+    button:hover span {
+      transform: translateY(0%);
     }
-    &__keyboard {
-        font-family: "NeueMontreal-Medium";
-        font-size: $fontsize-m;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        height: 12%;
-        margin-top: 20px;
-        width: 20%;
-        min-width: 270px;
-        color: $primary-color-darkblue;
-         
-
-        &__ctn {
-            font-family: "NeueMontreal-Medium";
-            width: 60%;
-            display: flex;
-            justify-content: space-between;
-       
-        }
-        &__input {
-            width: 50%;
-            display: flex;
-            justify-content: space-between;
-            // border: 2px solid blue;
-            input {
-                display: none;
-            }
-
-            label {
-                cursor: pointer;
-                color: #8e8c8c;
-                transition: 0.3s ease-in-out;
-            }
-            input:checked ~ label {
-                color: rgb(24, 23, 23);
-            }
-        }
-    }
-
-
-    &__video {
-        display: flex;
-        height: 70%;
-        width: 30%;
-        border: 2px solid red;
-        &__ctn {
-            // display: none;
-            border: 2px solid blue;
-            width: 100%;
-        }
-
-    }
-    &__gotoplay {
-        height: 15%;
-
-        align-items: center;
-        // border: 2px solid rgb(0, 0, 255);
-        button {
-            cursor: pointer;
-            border: none;
-            background: none;
-            font-size: 26px;
-            margin-top: 10px;
-            font-family: "NeueMontreal-Medium";
-            display: flex;
-            flex-direction: column;
-            height: 26px;
-            overflow: hidden;
-            // border: 2px solid red;
-
-            span {
-                margin: 0;
-                padding: 0;
-                line-height: 0.9;
-                height: 26px;
-                transform: translateY(-100%);
-                transition: 0.3s ease-in-out;
-            }
-        }
-
-        button:hover span {
-            transform: translateY(0%);
-        }
-    }
+  }
 }
