--- a/frontend/src/styles/_theme.scss
+++ b/frontend/src/styles/_theme.scss
@@ -1,7 +1,10 @@
 // $primary-color-darkblue: #0c1a33;
-$primary-color-darkblue: #091429;
+
+$primary-color-darkblue: #0f1f41;
 $primary-color-mediumblue: #091940e1;
 $white-board: rgba(240, 238, 238, 0.874);
-$white-board-opac: rgba(240, 238, 238, 1);
+$white-board-opac: rgb(240, 239, 239);
+$white-text: rgb(243, 243, 243);
+$dark-text: #061022;
 
 $nav-margin-right: clamp(4px, 0.5%, 11px);
