--- a/frontend/src/components/Loader/Loader.module.scss
+++ b/frontend/src/components/Loader/Loader.module.scss
@@ -64,7 +64,7 @@
     position: absolute;
     left: 0;
     top: 0;
-    background: $white-board-opac;
+    background: $white-text;
     width: 5px;
     height: 100%;
   }
@@ -80,7 +80,7 @@
     font-size: 2.5vw;
     z-index: 10;
     transition: 0.3s ease-in-out;
-    color: $white-board-opac;
+    color: $white-text;
   }
 
   button:hover {
@@ -102,7 +102,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  color: $white-board-opac;
+  color: $white-text;
 
   h2 {
     font-family: "OktaNeue-Normal";
