--- a/frontend/src/components/Projects/Project/Project.module.scss
+++ b/frontend/src/components/Projects/Project/Project.module.scss
@@ -2,415 +2,420 @@
 @import "../../../styles/font";
 
 .main {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 50%;
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 50%;
 
-    z-index: 3000;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    // border: 2px solid blue;
-    min-height: 400px;
+  z-index: 3000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  // border: 2px solid blue;
+  min-height: 400px;
 }
 
 .project__wrapper {
-    margin: 0;
-    position: absolute;
-    overflow: hidden;
-    background-color: $white-board-opac;
+  margin: 0;
+  position: absolute;
+  overflow: hidden;
+  background-color: $white-board-opac;
+  display: flex;
+  justify-content: center;
 
-    top: 0%;
-    left: 50%;
-    width: 0%;
-    height: 0%;
-    transform: translate(-50%, -50%);
+  top: 0%;
+  left: 50%;
+  width: 0%;
+  height: 0%;
+  transform: translate(-50%, -50%);
 
-    -webkit-backdrop-filter: blur(20px);
-    // clip-path: polygon(5% 0, 95% 0, 100% 9%, 100% 91%, 95% 100%, 5% 100%, 0 91%, 0 9%);
-    z-index: 120;
-    backdrop-filter: blur(20px);
+  -webkit-backdrop-filter: blur(20px);
+  // clip-path: polygon(5% 0, 95% 0, 100% 9%, 100% 91%, 95% 100%, 5% 100%, 0 91%, 0 9%);
+  z-index: 120;
+  backdrop-filter: blur(20px);
 }
 
 .project {
-    width: 100%;
+  width: 85%;
+  height: 100%;
+  opacity: 0;
+  background-color: #f8f8f800;
+  z-index: 100;
+
+  // clip-path: polygon(5% 0, 95% 0, 100% 9%, 100% 91%, 95% 100%, 5% 100%, 0 91%, 0 9%);
+  display: flex;
+  justify-content: left;
+  //   border: 2px solid blue;
+
+  &__left {
+    width: 60%;
     height: 100%;
-    opacity: 0;
-    background-color: #f8f8f800;
-    z-index: 100;
-
-    // clip-path: polygon(5% 0, 95% 0, 100% 9%, 100% 91%, 95% 100%, 5% 100%, 0 91%, 0 9%);
+    margin-top: 2vh;
     display: flex;
-    justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
+    position: relative;
+    // border: 2px solid red;
 
-    &__left {
-        width: 65%;
-        height: 100%;
-        margin-left: 7vw;
-        margin-top: 2vh;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        position: relative;
-
-        &__wrapper {
-            // border: 2px solid red;
-            position: fixed;
-            z-index: 1000;
-            height: 4%;
-            width: 45%;
-            bottom: 15%; //pic height: 80% margin-top : 7%
-            background: rgb(240, 238, 238);
-            background: linear-gradient(0deg, rgb(240, 238, 238) 22%, rgba(248, 247, 247, 0) 100%);
-        }
+    &__wrapper {
+      position: fixed;
+      z-index: 1000;
+      height: 2%;
+      width: 50%;
+      bottom: 17%; //pic height: 80% margin-top : 7%
+      background: rgb(240, 238, 238);
+      background: linear-gradient(
+        0deg,
+        rgb(240, 238, 238) 22%,
+        rgba(248, 247, 247, 0) 100%
+      );
     }
+  }
 
-    &__pic::-webkit-scrollbar {
-        display: none;
-    }
-    &__pic {
+  &__pic::-webkit-scrollbar {
+    display: none;
+  }
+  &__pic {
+    position: relative;
+    width: 100%;
+    height: 63vh;
+    display: flex;
+    justify-content: center;
+    overflow: hidden;
+    overflow-y: scroll;
+    margin-top: 5dvh;
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; /* Internet Explorer 10+ */
+
+    &__box {
+      position: relative;
+      width: 95%;
+      padding-top: 0%;
+      height: 117vw;
+      display: flex;
+      flex-direction: column;
+
+      row-gap: 0px;
+      gap: 15px;
+
+      &__ctn {
         position: relative;
         width: 100%;
-        height: 63vh;
         display: flex;
-        justify-content: center;
+        aspect-ratio: 2;
         overflow: hidden;
-        overflow-y: scroll;
-        margin-top: 7dvh;
-        scrollbar-width: none; /* Firefox */
-        -ms-overflow-style: none; /* Internet Explorer 10+ */
-        // border: 2px solid red;
-
-        &__box {
-            position: relative;
-            width: 95%;
-            padding-top: 0%;
-            height: 117vw;
-            display: flex;
-            flex-direction: column;
-
-            row-gap: 0px;
-            gap: 15px;
-
-            &__ctn {
-                position: relative;
-                width: 100%;
-                display: flex;
-                aspect-ratio: 2;
-                overflow: hidden;
-                justify-content: space-between;
-                gap: 15px;
-                border-radius: 7px;
-                background-color: rgb(235, 233, 233);
-                img {
-                    width: 100%;
-                }
-
-                &__alone {
-                    width: 95%;
-                    height: 92%;
-                    border-radius: 7px;
-                    overflow: hidden;
-                    // border: 2px solid red;
-                    background-color: rgb(235, 233, 233);
-                }
-            }
-            &__ctn__two {
-                position: relative;
-                width: 100%;
-                aspect-ratio: 2.1;
-                overflow: hidden;
-                // border: 2px solid rgb(13, 255, 0);
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-                gap: 15px;
-
-                &__small {
-                    width: 50%;
-                    height: 100%;
-                    border-radius: 7px;
-                    overflow: hidden;
-                    background-color: transparent;
-                }
-
-                img {
-                    width: 100%;
-                }
-            }
+        justify-content: space-between;
+        gap: 15px;
+        border-radius: 7px;
+        background-color: rgb(235, 233, 233);
+        img {
+          width: 100%;
         }
 
-        &__button {
-            cursor: pointer;
-            border: none;
-            font-family: "OktaNeue-Bold";
-            font-size: 18px;
-            background-color: #151818;
-            color: white;
-            padding: 7px 15px;
-            position: fixed;
-            bottom: 18%;
-            left: calc(40% + 1.25rem);
+        &__alone {
+          width: 95%;
+          height: 92%;
+          border-radius: 7px;
+          overflow: hidden;
+          // border: 2px solid red;
+          background-color: rgb(235, 233, 233);
         }
-
-        &__title {
-            display: flex;
-            align-items: baseline;
-            width: 90%;
-            display: flex;
-            justify-content: space-between;
-            height: 3.5rem;
-            font-family: "OktaNeue-Medium";
-            font-style: normal;
-            text-transform: uppercase;
-            font-size: 0.7rem;
-            margin: 0;
-            padding: 0;
-            margin-top: 15px;
-
-            &__wrapper {
-                height: calc($fontsize-m + 1px);
-                overflow: hidden;
-                // border: 2px solid red;
-            }
-            &__live {
-                font-family: "OktaNeue-Medium";
-                color: $primary-color-darkblue;
-                font-weight: 500;
-                font-size: $fontsize-m;
-                gap: 5px;
-                display: flex;
-                align-items: center;
-                line-height: 1;
-                cursor: pointer;
-                transform: translateY(-100%);
-                transition: 0.3s ease-in-out;
-                height: calc($fontsize-m + 2px);
-            }
-
-            &__wrapper:hover &__live {
-                transform: translateY(0%);
-            }
-
-            &__svg {
-                width: 12px;
-                margin-top: 2px;
-            }
-            h2 {
-                margin: 0;
-                padding: 0;
-                text-align: left;
-                font-size: 2.3vw;
-            }
-
-            &__ask {
-                margin-top: -5px;
-                line-height: 0;
-                height: 15px;
-            }
-        }
-    }
-    &__content {
-        height: 70%;
-        width: 45%;
-        margin-top: 6%;
-        margin-left: 4%;
-        margin-right: 5%;
-        // border: 2px solid orange;
+      }
+      &__ctn__two {
+        position: relative;
+        width: 100%;
+        aspect-ratio: 2.1;
+        overflow: hidden;
+        // border: 2px solid rgb(13, 255, 0);
         display: flex;
-        flex-direction: column;
-        gap: 1%;
-        color: $primary-color-darkblue;
-
-        font-family: "NeueMontreal-Regular";
-        font-weight: 200;
-        letter-spacing: 1px;
-        font-size: 1.1vw;
-        line-height: 1.2;
-        padding: 0px 55px;
-
-        p {
-            margin: 0;
-            padding: 0;
-            width: 100%;
-            font-size: $fontsize-m;
-            // text-align: justify;
-        }
-        h3 {
-            font-family: "OktaNeue-Medium";
-            font-size: 1vw;
-            margin: 0;
-            margin-top: 5px;
-            margin-bottom: 7px;
-        }
-
-        &__techno,
-        &__client,
-        &__year {
-            font-family: "NeueMontreal-Regular";
-            font-weight: 200;
-            letter-spacing: 1px;
-            font-size: 1.1vw;
-            width: 74%;
-            margin: 0;
-            line-height: 1.3;
-        }
-
-        &__client {
-            width: 100%;
-            text-transform: uppercase;
-        }
-
-        &__techno {
-            width: 80%;
-
-            &__text {
-                // font-size: $fontsize-s;
-                font-weight: 200;
-                font-size: 1vw;
-                text-transform: uppercase;
-            }
-        }
-
-        &__year {
-            display: flex;
-            flex-direction: column;
-            align-items: flex-end;
-            width: 15%;
-            // border: 2px solid red;
-        }
-
-        &__clientyear {
-            width: 100%;
-            display: flex;
-            justify-content: space-between;
-        }
-
-        &__year__text {
-            width: 100%;
-            display: flex;
-            justify-content: right;
-            p {
-                font-size: 16px;
-                text-align: right;
-                line-height: 2.4;
-            }
-        }
-    }
-
-    &__close {
-        position: absolute;
-        top: 2vh;
-        right: 2vw;
-        display: flex;
+        justify-content: space-between;
         align-items: center;
-        gap: 3px;
-        font-family: "OktaNeue-Medium";
-        color: $primary-color-darkblue;
-        font-weight: 600;
-        font-size: $fontsize-s;
-        cursor: pointer;
+        gap: 15px;
 
-        span {
-            // border: 2px solid green;
-
-            height: 100%;
-            margin: 0;
-            padding: 0;
+        &__small {
+          width: 50%;
+          height: 100%;
+          border-radius: 7px;
+          overflow: hidden;
+          background-color: transparent;
         }
 
-        &__cross {
-            // border: 2px solid red;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            width: 20px;
-            height: 10px;
-            z-index: 1000;
-            margin-top: 3px;
-            transition: 0.3s ease-in-out;
+        img {
+          width: 100%;
         }
-    }
-
-    &__close:hover .project__close__cross {
-        animation: scaledDown 0.3s forwards;
+      }
     }
 
     &__button {
-        position: absolute;
-        bottom: 6%;
-        right: 2vw;
-        // border: 2px solid red;
-        width: 10%;
-        display: flex;
-        justify-content: flex-end;
-
-        button {
-            margin: 0;
-            padding: 0;
-            width: 40%;
-            // border: 2px solid red;
-        }
-        span {
-            
-            font-family: "OktaNeue-SemiBold";
-            text-transform: uppercase;
-            font-size: 1.3vw;
-            font-weight: 200;
-            color: $primary-color-darkblue;
-            margin: 0;
-        }
-
-        &__prev {
-            span {
-                color: #5d5c61cc;
-                font-weight: 200;
-            }
-        }
-
-        &__prev:hover,
-        &__btn:hover {
-            animation: scaledUp 0.3s forwards;
-        }
-        &__btn {
-            border: none;
-            all: unset;
-            width: 100%;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            cursor: pointer;
-            margin: 0;
-
-            // border: 2px solid red;
-        }
-        &__svg {
-            width: 25px;
-        }
+      cursor: pointer;
+      border: none;
+      font-family: "OktaNeue-Bold";
+      font-size: 18px;
+      background-color: #151818;
+      color: white;
+      padding: 7px 15px;
+      position: fixed;
+      bottom: 18%;
+      left: calc(40% + 1.25rem);
     }
+
+    &__title {
+      display: flex;
+      align-items: baseline;
+      width: 90%;
+      display: flex;
+      justify-content: space-between;
+      height: 3.5rem;
+      font-family: "OktaNeue-Medium";
+      font-style: normal;
+      text-transform: uppercase;
+      margin: 0;
+      padding: 0;
+      margin-top: 20px;
+      //   border: 2px solid red;
+
+      &__title {
+        font-size: 1vw;
+      }
+
+      &__wrapper {
+        height: calc($fontsize-m + 1px);
+        overflow: hidden;
+      }
+      &__live {
+        font-family: "OktaNeue-Medium";
+        color: $primary-color-darkblue;
+        font-weight: 500;
+        font-size: $fontsize-m;
+        gap: 5px;
+        display: flex;
+        align-items: center;
+        line-height: 1;
+        cursor: pointer;
+        transform: translateY(-100%);
+        transition: 0.3s ease-in-out;
+        height: calc($fontsize-m + 2px);
+      }
+
+      &__wrapper:hover &__live {
+        transform: translateY(0%);
+      }
+
+      &__svg {
+        width: 12px;
+        margin-top: 2px;
+      }
+      h2 {
+        margin: 0;
+        padding: 0;
+        text-align: left;
+        font-size: 2vw;
+      }
+
+      &__ask {
+        margin-top: -5px;
+        line-height: 0;
+        height: 15px;
+      }
+    }
+  }
+  &__content {
+    height: 70%;
+    width: 30%;
+    margin-left: 5%;
+    margin-top: 6%;
+    // border: 2px solid orange;
+    display: flex;
+    flex-direction: column;
+    gap: 1%;
+    color: $primary-color-darkblue;
+
+    font-family: "NeueMontreal-Regular";
+    font-weight: 200;
+    letter-spacing: 1px;
+    font-size: 1.1vw;
+    line-height: 1.2;
+
+    p {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      font-size: $fontsize-m;
+      // text-align: justify;
+    }
+    h3 {
+      font-family: "OktaNeue-Medium";
+      font-size: 1vw;
+      margin: 0;
+      margin-top: 5px;
+      margin-bottom: 7px;
+    }
+
+    &__techno,
+    &__client,
+    &__year {
+      font-family: "NeueMontreal-Regular";
+      font-weight: 200;
+      letter-spacing: 1px;
+      font-size: 1.1vw;
+      width: 74%;
+      margin: 0;
+      line-height: 1.3;
+    }
+
+    &__client {
+      width: 100%;
+      text-transform: uppercase;
+    }
+
+    &__techno {
+      width: 80%;
+
+      &__text {
+        // font-size: $fontsize-s;
+        font-weight: 200;
+        font-size: 1vw;
+        text-transform: uppercase;
+      }
+    }
+
+    &__year {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-end;
+      width: 15%;
+      // border: 2px solid red;
+    }
+
+    &__clientyear {
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+    }
+
+    &__year__text {
+      width: 100%;
+      display: flex;
+      justify-content: right;
+      p {
+        font-size: 16px;
+        text-align: right;
+        line-height: 2.4;
+      }
+    }
+  }
+
+  &__close {
+    position: absolute;
+    top: 2vh;
+    right: 2vw;
+    display: flex;
+    align-items: center;
+    gap: 3px;
+    font-family: "OktaNeue-Medium";
+    color: $primary-color-darkblue;
+    font-weight: 600;
+    font-size: $fontsize-s;
+    cursor: pointer;
+
+    span {
+      // border: 2px solid green;
+
+      height: 100%;
+      margin: 0;
+      padding: 0;
+    }
+
+    &__cross {
+      // border: 2px solid red;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 20px;
+      height: 10px;
+      z-index: 1000;
+      margin-top: 3px;
+      transition: 0.3s ease-in-out;
+    }
+  }
+
+  &__close:hover .project__close__cross {
+    animation: scaledDown 0.3s forwards;
+  }
+
+  &__button {
+    position: absolute;
+    bottom: 7.5%;
+    right: 2vw;
+    // border: 2px solid red;
+    width: 10%;
+    display: flex;
+    justify-content: flex-end;
+
+    button {
+      margin: 0;
+      padding: 0;
+      width: 40%;
+      // border: 2px solid red;
+    }
+    span {
+      font-family: "OktaNeue-SemiBold";
+      text-transform: uppercase;
+      font-size: 1.3vw;
+      font-weight: 200;
+      color: $primary-color-darkblue;
+      margin: 0;
+    }
+
+    &__prev {
+      span {
+        color: rgba(155, 154, 154, 0.719);
+        font-weight: 200;
+      }
+    }
+
+    &__prev:hover,
+    &__btn:hover {
+      animation: scaledUp 0.3s forwards;
+    }
+    &__btn {
+      border: none;
+      all: unset;
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      cursor: pointer;
+      margin: 0;
+
+      // border: 2px solid red;
+    }
+    &__svg {
+      width: 25px;
+    }
+  }
 }
 
 @keyframes scaledDown {
-    0% {
-        transform: scale(1);
-    }
-    50% {
-        transform: scale(0.8);
-    }
-    100% {
-        transform: scale(1);
-    }
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(0.8);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
 
 @keyframes scaledUp {
-    0% {
-        transform: scale(1);
-    }
-    50% {
-        transform: scale(1.1);
-    }
-    100% {
-        transform: scale(1);
-    }
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
