--- a/frontend/src/components/Loader/Loader.module.scss
+++ b/frontend/src/components/Loader/Loader.module.scss
@@ -26,20 +26,20 @@
 
     &__logo {
       position: absolute;
-      top: 37%;
-      width: 7vw;
+      top: 33%;
+      width: 8vw;
       height: 50%;
     }
   }
 }
 
 .settingUp {
-  margin-top: 1vw;
-  color: #787777;
-  font-family: "NeueMontreal-Regular";
+  margin-top: 0.5vw;
+  color: $white-text;
+  font-family: "NeueMontreal-Medium";
   text-transform: uppercase;
-  font-size: $fontsize-m;
-  font-weight: 700;
+  font-size: 0.8vw;
+  font-weight: 200;
 }
 
 .loaderbar {
@@ -48,8 +48,8 @@
   justify-content: center;
   top: 55%;
   left: 50%;
-  width: 25dvw;
-  height: 0.5vw;
+  width: 40dvw;
+  height: 2px;
   transform: translate(-50%, -50%);
 
   &__back {
@@ -58,7 +58,7 @@
     top: 0;
     width: 100%;
     height: 100%;
-    background: #787777;
+    background: #797777;
   }
   &__one {
     position: absolute;
@@ -76,7 +76,7 @@
     background: none;
     border: none;
     cursor: pointer;
-    font-family: "OktaNeue-Bold";
+    font-family: "NeueMontreal-Medium";
     font-size: 2.5vw;
     z-index: 10;
     transition: 0.3s ease-in-out;
@@ -105,7 +105,7 @@
   color: $white-text;
 
   h2 {
-    font-family: "OktaNeue-Normal";
+    font-family: "OktaNeue-Medium";
     font-weight: 200;
     margin: 0;
   }
