--- a/frontend/src/components/Projects/Projects.module.scss
+++ b/frontend/src/components/Projects/Projects.module.scss
@@ -165,7 +165,7 @@
       cursor: pointer;
       margin: 0;
       position: absolute;
-      color: #091429;
+      color: $primary-color-darkblue;
       bottom: 4vw;
       right: 4vw;
       //   border: 2px solid red;
