--- a/frontend/src/components/Menu/Menu.module.scss
+++ b/frontend/src/components/Menu/Menu.module.scss
@@ -37,21 +37,22 @@
 
   &__item {
     margin: 8% 8% 15% 8%;
-    margin-top: 15%;
+    margin-top: 13%;
     display: flex;
     flex-direction: column;
     line-height: 1;
     gap: 2px;
-    height: 35%;
+    height: 50%;
 
     &__wrapper {
       display: flex;
       flex-direction: column;
       font-size: 4.5vw;
       overflow: hidden;
-      height: 4.8vw;
+      height: 4.4vw;
       width: 100%;
       text-align: left;
+      // border: 1px solid red;
     }
 
     &__span {
@@ -64,12 +65,12 @@
       margin-bottom: 0;
       padding: 0;
       transform: translateY(-50%);
-      margin-top: -0.3vw;
+      margin-top: -0.5vw;
       span {
         margin: 0;
         margin-top: 2px;
         padding: 0;
-        height: 5vw;
+        height: 4.2vw;
         // border: 2px solid red;
       }
     }
@@ -83,8 +84,10 @@
     font-weight: 100;
     display: flex;
     flex-direction: column;
+
     margin-left: 8%;
-    height: 60%;
+    // margin-top: 10%;
+    height: 40%;
 
     &__text {
       font-size: 1.1vw;
@@ -122,8 +125,7 @@
   }
 
   &__social {
-    margin: 8%;
-    margin-bottom: 5vh;
+    margin: 8% 8% 3vh 8%;
     display: flex;
     flex-direction: column;
     gap: 9px;
