--- a/frontend/src/components/Loader/Loader.module.scss
+++ b/frontend/src/components/Loader/Loader.module.scss
@@ -34,7 +34,7 @@
 }
 
 .settingUp {
-  margin-top: 0.5vw;
+  margin-top: 0.7vw;
   color: $white-text;
   font-family: "NeueMontreal-Medium";
   text-transform: uppercase;
@@ -49,7 +49,7 @@
   top: 55%;
   left: 50%;
   width: 40dvw;
-  height: 2px;
+  height: 0.4vw;
   transform: translate(-50%, -50%);
 
   &__back {
