Done : Navbar \ Adjust color / ScrollDiscover \ Fontsize

--- a/frontend/src/components/Navbar/Navbar.module.scss
+++ b/frontend/src/components/Navbar/Navbar.module.scss
@@ -14,7 +14,7 @@
   letter-spacing: 1px;
   font-size: 0.9vw;
   mix-blend-mode: difference;
-  color: white;
+  color: #cfb49a;
   transform-origin: left top;
   transform: rotate(90deg);
   top: 0;
