--- a/frontend/src/components/PlayView/PlayView.module.scss
+++ b/frontend/src/components/PlayView/PlayView.module.scss
@@ -23,7 +23,7 @@
   }
 
   &__view {
-    color: rgb(255, 255, 255);
+    color: #cfb49a;
     transition: 0.3s ease-in-out;
   }
 
@@ -42,7 +42,7 @@
     transition: 0.3s ease-in-out;
   }
   &__play {
-    color: rgb(255, 255, 255);
+    color: #cfb49a;
     // color: $primary-color-darkblue;
     transition: 0.3s ease-in-out;
   }
