--- a/frontend/src/components/SecretsFound/SecretsFound.module.scss
+++ b/frontend/src/components/SecretsFound/SecretsFound.module.scss
@@ -6,7 +6,7 @@
   // position: fixed;
   // bottom: 0.2vh;
   // left: 4vw;
-  color: white;
+  color: #cfb49a;
   mix-blend-mode: difference;
 
   span {
