Need : Change font for License...

--- a/frontend/src/components/Navbar/Navbar.module.scss
+++ b/frontend/src/components/Navbar/Navbar.module.scss
@@ -10,7 +10,8 @@
   display: flex;
   justify-content: space-between;
   border-radius: 3px;
-  font-family: "OktaNeue-SemiBold";
+  font-family: "OktaNeue-Medium";
+  font-weight: 500;
   letter-spacing: 1px;
   font-size: 0.9vw;
   mix-blend-mode: difference;
