--- a/frontend/src/components/SecretsFound/SecretsFound.module.scss
+++ b/frontend/src/components/SecretsFound/SecretsFound.module.scss
@@ -11,7 +11,7 @@
 
   span {
     text-transform: uppercase;
-    font-family: "OktaNeue-SemiBold";
+    font-family: "OktaNeue-Medium";
     font-size: 0.9vw;
   }
 }
