--- a/frontend/src/components/PlayView/PlayView.module.scss
+++ b/frontend/src/components/PlayView/PlayView.module.scss
@@ -13,7 +13,7 @@
   justify-content: space-around;
 
   button {
-    font-family: "OktaNeue-SemiBold";
+    font-family: "OktaNeue-Medium";
     letter-spacing: 1px;
     font-size: 0.9vw;
     cursor: pointer;
