--- a/frontend/src/components/Projects/Projects.module.scss
+++ b/frontend/src/components/Projects/Projects.module.scss
@@ -39,7 +39,7 @@
       width: 50%;
 
       h2 {
-        font-family: "OktaNeue-SemiBold";
+        font-family: "OktaNeue-Medium";
         // font-family: "OktaNeue-Normal";
         text-transform: uppercase;
         font-size: 1.3vw;
@@ -123,8 +123,8 @@
             list-style: none;
             display: flex;
             align-items: baseline;
-            font-family: "OktaNeue-SemiBold";
-            font-weight: 200;
+            font-family: "OktaNeue-Medium";
+            font-weight: 900;
             font-size: 2.7vw;
             letter-spacing: 0.5px;
             color: rgb(166, 166, 166);
@@ -146,7 +146,8 @@
               height: calc(1.5vw + 3px);
             }
             &__text {
-              font-family: "OktaNeue-Normal";
+              font-family: "NeueMontreal-Regular";
+              font-weight: 100;
               text-transform: initial;
               margin: 0;
               font-size: $fontsize-m;
@@ -169,9 +170,9 @@
       bottom: 4vw;
       right: 6vw;
       // border: 2px solid red;
-      font-family: "OktaNeue-SemiBold";
+      font-family: "NeueMontreal-Medium";
       text-transform: uppercase;
-      font-weight: 200;
+      font-weight: 900;
       text-align: left;
       width: 5vw;
       min-width: 180px;
@@ -183,7 +184,7 @@
       }
 
       &__wrapper {
-        height: 1.7vw;
+        height: 1.5vw;
         // border: 2px solid red;
         display: flex;
         flex-direction: column;
