--- a/frontend/src/styles/_font.scss
+++ b/frontend/src/styles/_font.scss
@@ -1,42 +1,42 @@
 @use "./utils/funtions" as f;
 
 @font-face {
-    font-family: "NeueMontreal-Medium";
-    src: url("./font/PPNeueMontreal-Medium.otf");
+  font-family: "NeueMontreal-Medium";
+  src: url("./font/PPNeueMontreal-Medium.otf");
 }
 
 @font-face {
-    font-family: "NeueMontreal-Regular";
-    src: url("./font/PPNeueMontreal-Book.otf");
+  font-family: "NeueMontreal-Regular";
+  src: url("./font/PPNeueMontreal-Book.otf");
 }
 
 @font-face {
-    font-family: "VCR_OSD";
-    src: url("./font/VCR_OSD_MONO.ttf");
+  font-family: "VCR_OSD";
+  src: url("./font/VCR_OSD_MONO.ttf");
 }
 @font-face {
-    font-family: "Nacelle";
-    src: url("./font/Nacelle-SemiBold.otf");
+  font-family: "Nacelle";
+  src: url("./font/Nacelle-SemiBold.otf");
 }
 @font-face {
-    font-family: "Nacelle-Regular";
-    src: url("./font/Nacelle-Regular.otf");
+  font-family: "Nacelle-Regular";
+  src: url("./font/Nacelle-Regular.otf");
 }
 @font-face {
-    font-family: "OktaNeue-Normal";
-    src: url("./font/OktaNeue-Normal.ttf");
+  font-family: "OktaNeue-Normal";
+  src: url("./font/OktaNeue-Normal.ttf");
 }
 @font-face {
-    font-family: "OktaNeue-Medium";
-    src: url("./font/OktaNeue-Medium.ttf");
+  font-family: "OktaNeue-Medium";
+  src: url("./font/OktaNeue-Medium.woff");
 }
 @font-face {
-    font-family: "OktaNeue-Bold";
-    src: url("./font/OktaNeue-Bold.ttf");
+  font-family: "OktaNeue-Bold";
+  src: url("./font/OktaNeue-Bold.ttf");
 }
 @font-face {
-    font-family: "OktaNeue-SemiBold";
-    src: url("./font/OktaNeue-SemiBold.ttf");
+  font-family: "OktaNeue-SemiBold";
+  src: url("./font/OktaNeue-SemiBold.ttf");
 }
 
 $fontsize-title: 14vw;
