--- a/frontend/src/styles/_theme.scss
+++ b/frontend/src/styles/_theme.scss
@@ -1,8 +1,10 @@
 // $primary-color-darkblue: #0c1a33;
 
-$primary-color-darkblue: #0f1f41;
+$primary-color-darkblue: #071126;
 $primary-color-mediumblue: #091940e1;
+$primary-color-menu: #213558;
 $white-board: rgba(240, 238, 238, 0.874);
+$white-board-project: rgba(240, 238, 238, 0.63);
 $white-board-opac: rgb(240, 239, 239);
 $white-text: rgb(243, 243, 243);
 $dark-text: #061022;
