--- a/frontend/src/components/Loader/Loader.module.scss
+++ b/frontend/src/components/Loader/Loader.module.scss
@@ -36,7 +36,7 @@
 .settingUp {
   margin-top: 0.7vw;
   color: $white-text;
-  font-family: "NeueMontreal-Medium";
+  font-family: "NeueMontreal-Medium" !important;
   text-transform: uppercase;
   font-size: 0.8vw;
   font-weight: 200;
