--- a/frontend/src/components/Menu/Menu.module.scss
+++ b/frontend/src/components/Menu/Menu.module.scss
@@ -4,9 +4,10 @@
 .menu {
   position: fixed;
   z-index: 10000;
-  top: 0;
+  top: 1vh;
   right: -33dvw; //10px;
-  height: 100vh;
+  height: 98vh;
+  border-radius: 10px;
   min-height: 550px;
   width: 33dvw;
   -webkit-backdrop-filter: blur(13px);
@@ -16,7 +17,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background-color: $primary-color-darkblue;
+  background-color: $primary-color-menu;
   color: $white-text;
   &__close {
     margin-left: 8%;
