--- a/frontend/src/components/Projects/Projects.module.scss
+++ b/frontend/src/components/Projects/Projects.module.scss
@@ -13,16 +13,18 @@
 
   &__box__wrapper {
     // border: 2px solid green;
-    width: 100%;
-    height: 85%;
+    width: 93vw;
+    height: 80%;
     position: absolute;
-    top: 0;
+    top: 1vw;
     overflow: hidden;
-    -webkit-backdrop-filter: blur(10px);
-    backdrop-filter: blur(10px);
+
+    -webkit-backdrop-filter: blur(15px);
+    backdrop-filter: blur(15px);
     //rgb(230, 228, 228, 0.835); // rgb(230, 228, 228, 0.835)
-    background-color: $white-board;
-    border-radius: 0px 0px 5px 5px;
+    background-color: rgba(240, 238, 238, 0.61);
+    // border-radius: 0px 0px 5px 5px;
+    border-radius: 10px;
   }
 
   &__box {
@@ -119,18 +121,18 @@
             width: 100%;
             box-sizing: border-box;
             cursor: pointer;
-            padding-bottom: 3px;
+            // padding-bottom: 15px;
             list-style: none;
             display: flex;
             align-items: baseline;
             font-family: "OktaNeue-Medium";
-            font-weight: 900;
+            font-weight: 200;
             font-size: 2.7vw;
             letter-spacing: 0.5px;
-            color: rgb(166, 166, 166);
+            color: rgb(178, 178, 182);
             background-color: "transparent";
             transition: 0.2s ease-in-out;
-            height: calc(2.5vw + 3px);
+            height: calc(2.5vw + 10px);
           }
 
           &__project {
