--- a/frontend/src/components/Projects/Project/Project.module.scss
+++ b/frontend/src/components/Projects/Project/Project.module.scss
@@ -315,7 +315,7 @@
     gap: 3px;
     font-family: "OktaNeue-Medium";
     color: $primary-color-darkblue;
-    font-weight: 600;
+    font-weight: 200;
     font-size: $fontsize-s;
     cursor: pointer;
 
@@ -332,7 +332,7 @@
       display: flex;
       justify-content: center;
       align-items: center;
-      width: 20px;
+      width: 1.1vw;
       height: 10px;
       z-index: 1000;
       margin-top: 3px;
