Done : Adjust LoaderBar

--- a/frontend/src/components/Loader/Loader.module.scss
+++ b/frontend/src/components/Loader/Loader.module.scss
@@ -49,7 +49,7 @@
   top: 55%;
   left: 50%;
   width: 40dvw;
-  height: 0.4vw;
+  height: 0.2vw;
   transform: translate(-50%, -50%);
 
   &__back {
@@ -58,7 +58,7 @@
     top: 0;
     width: 100%;
     height: 100%;
-    background: #797777;
+    background: #63626288;
   }
   &__one {
     position: absolute;
