--- a/frontend/src/components/Navbar/Navbar.module.scss
+++ b/frontend/src/components/Navbar/Navbar.module.scss
@@ -15,7 +15,7 @@
   letter-spacing: 1px;
   font-size: 0.9vw;
   mix-blend-mode: difference;
-  color: #cfb49a;
+  color: #e4e4e4;
   transform-origin: left top;
   transform: rotate(90deg);
   top: 0;
