--- a/frontend/src/components/ScrollDiscover/ScrollDiscover.module.scss
+++ b/frontend/src/components/ScrollDiscover/ScrollDiscover.module.scss
@@ -15,14 +15,14 @@
   &__text {
     font-family: "OktaNeue-Bold";
     font-size: 1.1vw;
-    color: $primary-color-mediumblue;
+    color: $primary-color-darkblue;
   }
 
   &__circle {
     width: 1vw;
     height: 1vw;
     border-radius: 50%;
-    background-color: $primary-color-mediumblue;
+    background-color: $primary-color-darkblue;
     display: flex;
     justify-content: center;
     align-items: center;
