--- a/frontend/src/components/Contact/Contact.module.scss
+++ b/frontend/src/components/Contact/Contact.module.scss
@@ -8,11 +8,12 @@
 .wrapper {
   z-index: 20000;
   position: fixed;
-  width: 50%;
-  height: 100vh;
-  top: 0;
+  width: 50vw;
+  height: 99vh;
+  top: 0.5vh;
+  border-radius: 10px;
   bottom: 0;
-  right: -50%;
+  right: -50vw;
   box-sizing: border-box;
 
   background-color: rgba(236, 233, 233, 0.93);
@@ -321,7 +322,7 @@
       justify-content: center;
       margin-top: 30px;
       margin-bottom: 2vw;
-      height: 2.3vw;
+      height: 1.8vw;
 
       // border: 2px solid red;
       overflow: hidden;
