Done : Menu Color Adjust

--- a/frontend/src/styles/_theme.scss
+++ b/frontend/src/styles/_theme.scss
@@ -2,7 +2,7 @@
 
 $primary-color-darkblue: #071126;
 $primary-color-mediumblue: #091940e1;
-$primary-color-menu: #213558;
+$primary-color-menu: #1d3257;
 $white-board: rgba(240, 238, 238, 0.874);
 $white-board-project: rgba(240, 238, 238, 0.63);
 $white-board-opac: rgb(240, 239, 239);
