--- a/frontend/src/components/Contact/Contact.module.scss
+++ b/frontend/src/components/Contact/Contact.module.scss
@@ -75,13 +75,16 @@
     height: 50px;
   }
   &__close {
+    position: absolute;
+    right: 2vw;
+    top: 1vw;
     display: flex;
+    font-size: $fontsize-s;
     align-items: center;
     cursor: pointer;
     font-family: "OktaNeue-Medium";
     color: $primary-color-darkblue;
     font-weight: 600;
-    font-size: $fontsize-s;
     span {
       font-size: 14px;
       margin-bottom: 3px;
@@ -89,7 +92,7 @@
     }
     &__svg {
       margin-top: 3px;
-      width: 25px;
+      width: 1.2vw;
       transition: 0.3s ease-in-out;
     }
     &:hover &__svg {
