--- a/frontend/src/components/SecretsFound/SecretsFound.module.scss
+++ b/frontend/src/components/SecretsFound/SecretsFound.module.scss
@@ -6,12 +6,13 @@
   // position: fixed;
   // bottom: 0.2vh;
   // left: 4vw;
-  color: #e4e4e4;
+  // color: #e4e4e4;
+  color: $primary-color-darkblue;
   mix-blend-mode: difference;
 
   span {
     text-transform: uppercase;
     font-family: "OktaNeue-Medium";
-    font-size: 0.9vw;
+    font-size: 0.8vw;
   }
 }
