Done : CSS Adjust \ Loader \ Navbar transparency

--- a/frontend/src/components/PlayView/PlayView.module.scss
+++ b/frontend/src/components/PlayView/PlayView.module.scss
@@ -23,8 +23,8 @@
   }
 
   &__view {
-    // color: #e4e4e4;
-    color: $primary-color-darkblue;
+    color: #e4e4e4;
+    // color: $primary-color-darkblue;
     transition: 0.3s ease-in-out;
   }
 
@@ -44,8 +44,8 @@
     transition: 0.3s ease-in-out;
   }
   &__play {
-    // color: #e4e4e4;
-    color: $primary-color-darkblue;
+    color: #e4e4e4;
+    // color: $primary-color-darkblue;
     transition: 0.3s ease-in-out;
   }
 }
