--- a/frontend/src/components/Loader/Loader.module.scss
+++ b/frontend/src/components/Loader/Loader.module.scss
@@ -8,7 +8,7 @@
   left: 0;
   right: 0;
   z-index: 30000;
-  background-color: $primary-color-darkblue;
+  background-color: #000008;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -26,15 +26,15 @@
 
     &__logo {
       position: absolute;
-      top: 33%;
-      width: 8vw;
+      top: 42%;
+      width: 5vw;
       height: 50%;
     }
   }
 }
 
 .settingUp {
-  margin-top: 0.7vw;
+  margin-top: 0.9vw;
   color: $white-text;
   font-family: "NeueMontreal-Medium" !important;
   text-transform: uppercase;
@@ -77,10 +77,11 @@
     border: none;
     cursor: pointer;
     font-family: "NeueMontreal-Medium";
-    font-size: 2.5vw;
+    font-size: 1.5vw;
     z-index: 10;
     transition: 0.3s ease-in-out;
     color: $white-text;
+    margin-top: 5%;
   }
 
   button:hover {
@@ -97,7 +98,7 @@
   position: absolute;
   text-align: center;
   font-weight: 200;
-  font-size: $fontsize-s;
+
   height: 98%;
   display: flex;
   flex-direction: column;
@@ -108,6 +109,8 @@
     font-family: "OktaNeue-Medium";
     font-weight: 200;
     margin: 0;
+    font-size: 1.3vw;
+    letter-spacing: 1px;
   }
 }
 
