--- a/frontend/src/components/Navbar/Navbar.module.scss
+++ b/frontend/src/components/Navbar/Navbar.module.scss
@@ -16,16 +16,16 @@
   font-weight: 500;
   letter-spacing: 1px;
   font-size: 0.8vw;
-  // mix-blend-mode: difference;
-  // color: #e4e4e4;
-  color: $primary-color-darkblue;
+  mix-blend-mode: difference;
+  color: #e4e4e4;
+  // color: $primary-color-darkblue;
   transform-origin: left top;
   transform: rotate(90deg);
   top: 0;
   left: 34px;
   user-select: none;
   -webkit-user-select: none;
-  background-color: rgb(243, 243, 243);
+  // background-color: rgb(243, 243, 243);
   box-shadow: 0px 10px 15px -3px rgba(0, 0, 0, 0.1);
 
   &__soundsecrets {
