--- a/frontend/src/components/Projects/Projects.module.scss
+++ b/frontend/src/components/Projects/Projects.module.scss
@@ -72,6 +72,7 @@
       align-items: center;
       transition: 0.5s ease-in-out;
       border-radius: 7px;
+      background: none;
       &__ctn {
         top: 0;
         left: 0;
