--- a/frontend/src/components/SecretsFound/SecretsFound.module.scss
+++ b/frontend/src/components/SecretsFound/SecretsFound.module.scss
@@ -6,8 +6,8 @@
   // position: fixed;
   // bottom: 0.2vh;
   // left: 4vw;
-  // color: #e4e4e4;
-  color: $primary-color-darkblue;
+  color: #e4e4e4;
+  // color: $primary-color-darkblue;
   mix-blend-mode: difference;
 
   span {
