Done : CSS Adjust \ Black color transition \ Menu transparency

--- a/frontend/src/styles/global.scss
+++ b/frontend/src/styles/global.scss
@@ -101,7 +101,7 @@ body {
 .overlay-div {
   height: 25%;
   width: 100%;
-  background-color: $primary-color-darkblue;
+  background-color: #000009;
 }
 
 .mobile {
