--- a/frontend/src/components/Menu/Menu.module.scss
+++ b/frontend/src/components/Menu/Menu.module.scss
@@ -17,7 +17,9 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  background-color: $primary-color-menu;
+  background-color: #1d3257d8;
+  // opacity: 0.8;
+
   color: $white-text;
   &__close {
     position: absolute;
