--- a/frontend/src/components/Projects/Projects.module.scss
+++ b/frontend/src/components/Projects/Projects.module.scss
@@ -21,7 +21,7 @@
   &__box__wrapper {
     // border: 2px solid green;
     width: 86vw;
-    height: 70%;
+    height: 37vw;
     position: absolute;
     top: 4vw;
     overflow: hidden;
